--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="5sp">
+    android:padding="5sp"
+    android:weightSum="1">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -31,6 +32,40 @@
             android:text="@string/summary_text"
             style="@style/normalText"  />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="327dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="Low: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewLow"
+            android:layout_weight="0.41" />
+
+        <TextView
+            android:text="Low:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/low"
+            android:layout_weight="2533299456.00" />
+
+        <TextView
+            android:text="High: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textViewHigh"
+            android:paddingLeft="10dp" />
+
+        <TextView
+            android:text="High:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/high"
+            android:layout_weight="8159198720.00" />
     </LinearLayout>
 
 </LinearLayout>
